@@ -159,6 +159,40 @@ publishing.publications.create<MavenPublication>("maven") {
     artifact(tasks["shadowJar"])
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+
+    // Define a new source set for Java 18
+    sourceSets {
+        create("java18") {
+            java.srcDir("src/main/java18")
+        }
+    }
+}
+
+tasks.withType<JavaCompile> {
+    if (name == "compileJava18Java") {
+        options.compilerArgs.addAll(listOf("--add-modules", "jdk.incubator.vector", "-Xlint:unchecked"))
+        sourceCompatibility = JavaVersion.VERSION_18.toString()
+        targetCompatibility = JavaVersion.VERSION_18.toString()
+        classpath += sourceSets.main.get().output
+    }
+}
+
+tasks.withType<Jar> {
+    manifest {
+        attributes(
+            "Multi-Release" to "true"
+        )
+    }
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+    from(sourceSets.main.get().output)
+    from(sourceSets.getByName("java18").output) {
+        into("META-INF/versions/18")
+    }
+}
+
 tasks.shadowJar {
     minimize()
     archiveFileName.set("${project.name}-${project.version}.jar")
@@ -180,5 +214,13 @@ tasks.shadowJar {
         relocate("org.json", "ac.grim.grimac.shaded.json")
         relocate("org.intellij", "ac.grim.grimac.shaded.intellij")
         relocate("org.jetbrains", "ac.grim.grimac.shaded.jetbrains")
+    }
+
+    // Add the Java 18 classes to the correct location in the shadowed JAR
+    from(sourceSets.getByName("java18").output) {
+        into("META-INF/versions/18")
+    }
+    manifest {
+        attributes("Multi-Release" to "true")
     }
 }
